# GUDBUS

./: .dockerignore  .env.example  .gitattributes  .gitignore  DEPLOY.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml  tests.yml
data/: .gitkeep
deploy/: backup-db.sh  deploy.sh  docker-entrypoint.sh  gurps-bot.service
docs/: GURPS-IP-COMPLIANCE.md  comment-review-findings.md
gurps_bot/: __init__.py  __main__.py  bot.py  config.py
gurps_bot/cogs/: _autocomplete.py  admin.py  body_ref.py  calc_character.py  calc_combat.py  calc_magic.py  calc_movement.py  characters.py  combat.py  legal.py  (+7 more)
tests/: conftest.py  test_admin.py  test_attack_hidden.py  test_autocomplete.py  test_body_ref.py  test_cache.py  test_character_context.py  test_checks.py  test_cog_embed_caps.py  test_collision.py  test_combat_constants.py  test_combat_defend.py  test_combat_embeds.py  test_combat_hp_injury.py  test_combat_integration.py  test_combat_multi_combat_load.py  test_combat_permissions.py  test_combat_service.py  test_combat_session_unit.py  test_config_admin.py  test_context_safety.py  test_damage.py  test_dashboard.py  test_db_bootstrap.py  test_defense.py  test_dice.py  test_embeds.py  test_encumbrance.py  test_error_handler.py  test_explosion.py  test_extensions_load.py  test_fall.py  test_fk_enforcement.py  test_formatters.py  test_fuzzy.py  test_goldens.py  test_hiking.py  test_hit_location.py  test_injury.py  test_jump.py  (+35 more)
tools/: golden_magic.py  measure_sloc.py  parser_golden.py  sync_gcs_library.py
(+64 files in other folders)
